# Modelius

./: .gitignore  README.md  TESTING.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
e2e/: README.md  package-lock.json  package.json  tsconfig.json  wdio.conf.ts
e2e/specs/: smoke.e2e.ts
scripts/: probeCodexAppServer.mjs  probeKimiAcp.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  anthropic.rs  artifacts.rs  codex_proto.rs  compat.rs  gateway.rs  git.rs  harness.rs  installer.rs  kimi_proto.rs  lib.rs  main.rs  node_runtime.rs  openai.rs  secrets.rs  session.rs  stream.rs  terminal.rs  vault.rs
src-tauri/src/gateway/: anthropic_openai.rs  http.rs  mod.rs  openai_anthropic.rs  responses.rs
src/app/: App.tsx
tests/: tsconfig.json
tests/integration/: chats.test.ts  codeChats.test.ts  sessionStore.test.tsx
tests/unit/: agentChannel.test.ts  apiIds.test.ts  artifacts.test.ts  claudeModels.test.ts  codeModels.test.ts  codexAppServerTransform.test.ts  codexModels.test.ts  codexTransform.test.ts  diff.test.ts  effortCapabilities.test.ts  effortSurface.test.ts  errors.test.ts  kimiAcpTransform.test.ts  kimiModels.test.ts  memory.test.ts  migrateSecrets.test.ts  oauthRefresh.test.ts  partsProbe.test.ts  permissionControl.test.ts  pricing.test.ts  route.test.ts  search.test.ts  secretsHardening.test.ts  serializeCode.test.ts  tokens.test.ts  transform.test.ts  (+2 more)
(+122 files in other folders)
